--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -2,10 +2,14 @@
     <html>
         <head>
             <title>
-                My Website
+                RainForest
             </title>
         </head>
+      <h1 style="color:Green;text -align:Center;">
         <body>
+          <h1>
+            Rainforest
+          </h1>
             hi
         </body>
     </html>
