--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -6,7 +6,7 @@
             </title>
         </head>
         <body>
-          <h1 style="color:Green;text -align:Center;">
+          <h1 style="color:blue;text-align:Center;">
           <h1>
             Rainforest
           </h1>
