--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -1,10 +1,16 @@
 <!Doctype.html>
     <html>
-        <h1 style="color:blue;text-align:Center;">
+        <h1 style="color:blue;text-align:center;">
         <head>
             <title>
                 RainForest
             </title>
+            <style>
+                h1{
+                  color: green;
+                  text-align: center;
+                }
+            </style>
         </head>
         <body>
 
