--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -7,11 +7,12 @@
             </title>
             <style>
                 h1{
-                  color: green;
+                  color: white;
                   text-align: center;
                 }
             </style>
         </head>
+        <img src = "rainforest.jpg" height = "10%" width = "100%">
         <body>
 
           <h1>
