--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -7,12 +7,31 @@
             </title>
             <style>
                 h1{
-                  color: green;
+                  color: white;
                   text-align: center;
+                }
+                .container {
+                  position: relative;
+                  font-family: Arial;
+                }
+                .text-block {
+                  position: absolute;
+                  bottom: 20px;
+                  right: 20px;
+                  background-color: black;
+                  color: white;
+                  padding-left: 20px;
+                  padding-right: 20px;
                 }
             </style>
         </head>
-        <img src = "rainforest.jpg" height = "25%" width = "100%">
+        <div class="container">
+          <img src = "rainforest.jpg" height = "25%" width = "100%">
+          <div class="text-block">
+            <h1>Rainforest</h1>
+          </div>
+        </div>
+
         <body>
 
           <h1>
