--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -12,7 +12,7 @@
                 }
                 .container {
                   position: relative;
-                  font-family: Arial;
+                  font-family: times;
                 }
                 .text-block {
                   position: absolute;
