--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -15,9 +15,9 @@
                   font-family: times;
                 }
                 .text-block {
-                  position: absolute;
-                  bottom: 25px;
-                  right: 300px;
+                  position: center;
+                  bottom: 35px;
+  
                   color: white;
                   padding-left: 20px;
                   padding-right: 20px;
