New positioning method

--- a/MyFirstWeb.html
+++ b/MyFirstWeb.html
@@ -15,9 +15,9 @@
                   font-family: times;
                 }
                 .text-block {
-                  position: center;
-                  bottom: 35px;
-  
+                  position: absolute;
+                  bottom: 35%;
+                  right: 35%;
                   color: white;
                   padding-left: 20px;
                   padding-right: 20px;
